src/objects/Language_Model__c.object
<CustomObject>
    <fields>
        <fullName>Einstein_Dataset_Id__c</fullName>
        <label>Einstein Dataset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Model_Id__c</fullName>
        <label>Einstein Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Type__c</fullName>
        <label>Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intent</fullName>
                </value>
                <value>
                    <fullName>Sentiment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Language Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Language Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Language Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>